WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69273
CSS 2.1 failure: inline-replaced-height-008.htm
https://bugs.webkit.org/show_bug.cgi?id=69273
Summary
CSS 2.1 failure: inline-replaced-height-008.htm
Robert Hogan
Reported
2011-10-03 11:35:34 PDT
inline-replaced-height-008.htm inline-block-replaced-height-008.htm floating-inline-replaced-height-008.htm in the unstable test suite all fail
Attachments
Patch
(47.77 KB, patch)
2011-10-03 12:01 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(48.20 KB, patch)
2011-10-04 10:59 PDT
,
Robert Hogan
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2011-10-03 12:01:55 PDT
Created
attachment 109504
[details]
Patch
WebKit Review Bot
Comment 2
2011-10-03 16:00:01 PDT
Comment on
attachment 109504
[details]
Patch
Attachment 109504
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9938169
New failing tests: css2.1/20110323/inline-replaced-height-008.htm css2.1/20110323/inline-block-replaced-height-008.htm css2.1/20110323/floating-replaced-height-008.htm
Robert Hogan
Comment 3
2011-10-04 10:59:05 PDT
Created
attachment 109650
[details]
Patch
Robert Hogan
Comment 4
2011-10-04 10:59:36 PDT
(In reply to
comment #2
)
> New failing tests: > css2.1/20110323/inline-replaced-height-008.htm > css2.1/20110323/inline-block-replaced-height-008.htm > css2.1/20110323/floating-replaced-height-008.htm
Forgot to add a support file to the tests.
Simon Fraser (smfr)
Comment 5
2011-10-04 11:08:59 PDT
Comment on
attachment 109650
[details]
Patch r=me, but those don't look like mac pixel results. What platform are you generating them on?
Robert Hogan
Comment 6
2011-10-04 11:15:54 PDT
(In reply to
comment #5
)
> (From update of
attachment 109650
[details]
) > r=me, but those don't look like mac pixel results. What platform are you generating them on?
Chromium accepts mac pixel results for a lot of these tests, so I thought generating them from chromium would be OK. Sounds like that's not the case. I will land them to chromium and let Mac generate its own.
Robert Hogan
Comment 7
2011-10-13 12:04:18 PDT
Committed
r97378
: <
http://trac.webkit.org/changeset/97378
>
Nikolas Zimmermann
Comment 8
2011-10-13 23:58:00 PDT
I've stumbled across this work and read LayoutUnit RenderImage::computeReplacedLogicalHeight() const { + // FIXME: This function should use RenderReplaced::computeReplacedLogicalHeight() ... in the commit. I just wanted to denote that my patch in
bug 47156
(which is not ready yet, depends on another one to be landed first) fixes all of the inline-height* bugs in the CSS 2.1 testsuite. It also removes a lot of duplicated functionality from RenderImage, which is now present in RenderReplaced. I want to avoid that both of us do the same work!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug