CSS 2.1 failure: inline-replaced-height-008.htm https://bugs.webkit.org/show_bug.cgi?id=69273

Reviewed by Simon Fraser.

Source/WebCore:

Test: css2.1/20110323/inline-block-replaced-height-008.html

Per http://www.w3.org/TR/CSS21/visudet.html#inline-replaced-height,  if 'height' has computed value of
'auto', the replaced element has an intrinsic ratio and its used width is known or resolved, then
the used value of 'height' is determined by the equation (used width) / (intrinsic ratio).

* rendering/RenderImage.cpp:
(WebCore::RenderImage::computeReplacedLogicalHeight):
* rendering/RenderReplaced.h:

LayoutTests:

* css2.1/20110323/floating-replaced-height-008.htm: Added.
* css2.1/20110323/inline-block-replaced-height-008.htm: Added.
* css2.1/20110323/inline-replaced-height-008.htm: Added.
* css2.1/20110323/support/60x60-green.png: Added
* platform/chromium-linux/css2.1/20110323/floating-replaced-height-008-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/floating-replaced-height-008-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/inline-block-replaced-height-008-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/inline-block-replaced-height-008-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/inline-replaced-height-008-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/inline-replaced-height-008-expected.txt: Added.

Canonical link: https://commits.webkit.org/86108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97378 268f45cc-cd09-0410-ab3c-d52691b4dbfc