Source/WebCore/rendering/RenderReplaced.h
@@ -35,6 +35,8 @@ public:
     virtual LayoutUnit computeReplacedLogicalWidth(bool includeMaxWidth = true) const;
     virtual LayoutUnit computeReplacedLogicalHeight() const;
 
+    bool logicalHeightIsAuto() const;
+
 protected:
     virtual void willBeDestroyed();
 
@@ -62,7 +64,6 @@ private:
     virtual RenderBox* embeddedContentBox() const { return 0; }
     int computeIntrinsicLogicalWidth(RenderBox* contentRenderer, bool includeMaxWidth) const;
     int computeIntrinsicLogicalHeight(RenderBox* contentRenderer) const;
-    bool logicalHeightIsAuto() const;
 
     virtual const char* renderName() const { return "RenderReplaced"; }
 
